@@ -7,6 +7,7 @@ import sun.tools.attach.HotSpotVirtualMachine;
  *
  * @author <a href="mailto:mercyblitz@gmail.com">Mercy<a/>
  * @see HotSpotVirtualMachine
+ * Compile Args: --add-exports jdk.attach/sun.tools.attach=ALL-UNNAMED
  */
 public interface HotSpotVirtualMachineCallback<T> extends VirtualMachineCallback<HotSpotVirtualMachine, T> {
 
